[package]
name = "dock"
version = "0.1.0"
edition = "2021"
description = "The simple, fast and powerful command line parser"
license = "Apache-2.0"
repository = "https://github.com/dimensionhq/dock"
homepage = "dock.dev"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
