[package]
name = "dock-codegen"
version = "0.1.0"
edition = "2021"
description = "Default macro implementations for dock"
license = "Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"
dock = { path = "../dock"}